# rapl.rs

./: .gitignore  Cargo.toml  README.md  clean.sh
.github/workflows/: rust.yml
benchmark/interactive/: cura.sh  doomC.sh
benchmark/macro/doom/: 1kmaphk.lmp  1kmaphk.wad  1kmaprev.lmp  1kmaprev.wad  NUTS3.WAD  custom1kmap.wad  custommap.wad  custommap1krun.lmp  custommaprun1.lmp  custommapspin.lmp  demorun.sh  doomrun.lmp  nutsbmruntest5.lmp  nutsdemorun.lmp
benchmark/micro/: fib.sh
logs/: idle-isolate-1634807966.7505734.sample.csv  isolate-data-1634816876.872843.sample.json  tool-1633444269.0098088.sample.csv
src/: common.rs  logger.rs  main.rs  models.rs  task.rs  tools.rs
