[package]
name = "raplrs"
version = "1.0.0"
edition = "2018"
authors = ["cs-21-pt-9-01"]
repository = "https://github.com/cs-21-pt-9-01/rapl.rs"
license = "GPL3"
keywords = ["RAPL", "intel-rapl", "energy", "power"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
ncurses = "5.101.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.1.10"